[package]
name = "corserr"
version = "0.1.0"
authors = ["Intrusia Cyber Defense <rescue@intrusia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.warp]
version = "0.3"

[dependencies.env_logger]
version = "0.8"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"